Another frontend update

--- a/dispatcher_application/access_management/templates/access_management/group_delete.html
+++ b/dispatcher_application/access_management/templates/access_management/group_delete.html
@@ -18,7 +18,7 @@
     {% endcomment %}
 <br>
 <a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'group-list' %}" style="margin-left: 350px"></a>
-    <div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
+    <div class="container d-flex justify-content-center" style="text-align: left;">
             <br>
         <form method="POST" class="text">
             {% csrf_token %}
