--- a/dispatcher_application/authentication/templates/authentication/reset_password_complete.html
+++ b/dispatcher_application/authentication/templates/authentication/reset_password_complete.html
@@ -7,6 +7,7 @@
 {% endblock nav %}
 
 {% block content %}
+{% comment "" %}
 <br>
 <a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'user-list' %}" style="margin-left: 350px"></a>
     <div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
@@ -16,4 +17,21 @@
             <p>Your password has been set. You may go ahead and log in now.</p>
             <a href="{% url 'login' %}">Login</a>
     </div>
+{% endcomment %}
+<br>
+	<div class="container">
+		<div class="row">
+		  <div class="col">
+			<a class="bi bi-arrow-bar-left btn btn-lg" id="back" href="{% url 'user-list' %}"></a>
+		  </div>
+		  <div class="col-6" style="text-align: center;">
+			<h2>Password reset complete</h2>
+		  </div>
+		  <div class="col">
+		  </div>
+		</div>
+	</div>
+	<br>
+    <p style="text-align: center;">Your password has been set. You may go ahead and log in now.</p>
+    <a href="{% url 'login' %}" style="margin: 48%;">Login</a>
 {% endblock %}
