--- a/dispatcher_application/authentication/templates/authentication/reset_password_done.html
+++ b/dispatcher_application/authentication/templates/authentication/reset_password_done.html
@@ -8,6 +8,7 @@
 {% endblock nav %}
 
 {% block content %}
+{% comment "" %}
 <br>
 <a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'user-list' %}" style="margin-left: 350px"></a>
     <div class="container d-flex justify-content-center text" style="text-align: left; padding: auto;">
@@ -20,5 +21,30 @@
             <p>If you don’t receive an email, please make sure you’ve entered the right email address that belongs, 
                 to your account and check your spam folder.
             </p>
+    </div>
+{% endcomment %}
+
+<br>
+	<div class="container">
+		<div class="row">
+		  <div class="col">
+			<a class="bi bi-arrow-bar-left btn btn-lg" id="back" href="{% url 'user-list' %}"></a>
+		  </div>
+		  <div class="col-6" style="text-align: center;">
+			<h2>Password reset sent</h2>
+		  </div>
+		  <div class="col">
+		  </div>
+		</div>
+	</div>
+	<br>
+
+        <div style="text-align: center;">
+        <p>We’ve emailed you instructions for setting your password, 
+            if an account exists with the email you entered, you should receive them shortly.
+        </p>
+        <p>If you don’t receive an email, please make sure you’ve entered the right email address that belongs, 
+            to your account and check your spam folder.
+        </p>
     </div>
 {% endblock %}
