--- a/dispatcher_application/templates/logo_panel.html
+++ b/dispatcher_application/templates/logo_panel.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
         <div class="row">
-            <div class="col-md-2 col-sm-3 col-4">
+            <div class="col-xl-2 col-md-2 col-sm-3 col-4">
                 <img src="/static/images/CEVA.jpeg" alt="CEVA logo" height="64">
             </div>
-            <div class="col-md-9 col-sm-8 col-6 blue">
+            <div class="col-xl-9 col-md-9 col-sm-8 col-6 blue">
             </div>
-            <div class="col-md-1 col-sm-1 col-2 red">
+            <div class="col-xl-1 col-md-1 col-sm-1 col-2 red">
             </div>
         </div>
 </div>
