--- a/dispatcher_application/user_management/templates/user_management/user_update.html
+++ b/dispatcher_application/user_management/templates/user_management/user_update.html
@@ -26,7 +26,7 @@
 </div>
 <br>
 
-<div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
+<div class="container d-flex justify-content-center" style="text-align: left;">
     <br>
     <form method="POST" class="formular2" onSubmit="return validateUpdateForm()">
         {% csrf_token %}
