--- a/dispatcher_application/access_management/templates/access_management/group_access_add.html
+++ b/dispatcher_application/access_management/templates/access_management/group_access_add.html
@@ -17,7 +17,7 @@
 </div>
 <br>
 
-<div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
+<div class="container d-flex justify-content-center" style="text-align: left;">
     <br>
     <form method="POST" class="formular2">
         {% csrf_token %}
