--- a/dispatcher_application/access_management/templates/access_management/group_access_delete.html
+++ b/dispatcher_application/access_management/templates/access_management/group_access_delete.html
@@ -5,7 +5,7 @@
 {% block content %}
 <br>
 <a class="bi bi-arrow-bar-left btn btn-lg" href="{{ request.META.HTTP_REFERER }}" style="margin-left: 300px"></a>
-    <div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
+    <div class="container d-flex justify-content-center" style="text-align: left;">
             <br>
         <form method="POST" class="text">
             {% csrf_token %}
