--- a/dispatcher_application/authentication/templates/authentication/reset_password.html
+++ b/dispatcher_application/authentication/templates/authentication/reset_password.html
@@ -7,20 +7,52 @@
 {% endblock nav %}
 
 {% block content %}
+{% comment "" %}
 <br>
 <a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'login' %}" style="margin-left: 350px"></a>
-	<div class="container d-flex justify-content-center text" style="text-align: left; padding: auto;">
+	<div class="container" style="text-align: left; padding: auto;">
 		<br>
 		<h3>Password reset</h3>
 		
 		<p>Forgotten your password? Enter your email address below, 
 			and we’ll email instructions for reseting your password.</p>
 
-		<form method="POST" class="text">
+		<form method="POST" class="formular3">
 			{% csrf_token %}
 			{{form.as_p}}
 			
 			<input type="submit" name="Send email" class="btn btn-primary" style="float: right;">
 		</form>
 	</div>
+	{% endcomment %}
+<br>
+	<div class="container">
+		<div class="row">
+		  <div class="col">
+			<a class="bi bi-arrow-bar-left btn btn-lg" id="back" href="{% url 'login' %}"></a>
+		  </div>
+		  <div class="col-6" style="text-align: center;">
+			<h2>Password reset</h2>
+		  </div>
+		  <div class="col">
+		  </div>
+		</div>
+	</div>
+	<br>
+
+	<p style="text-align: center;">Forgotten your password? Enter your email address below, 
+		and we’ll email instructions for reseting your password.</p>
+
+		<br>
+
+		<div class="container d-flex justify-content-center" style="text-align: center;">
+		
+			<form method="POST" class="formular2" style="width:380px;">
+				{% csrf_token %}
+				{{form.as_p}}
+				
+				<input type="submit" id="btn-f2" value="Send email" class="btn btn-primary" style="float: right;">
+			</form>
+		</div>
+
 {% endblock %}
