--- a/dispatcher_application/branch_management/templates/branch_management/branch_access_add.html
+++ b/dispatcher_application/branch_management/templates/branch_management/branch_access_add.html
@@ -17,7 +17,7 @@
 </div>
 <br>
 
-<div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
+<div class="container d-flex justify-content-center" style="text-align: left;">
     <br>
     <form method="POST" class="formular2">
         {% csrf_token %}
