--- a/dispatcher_application/branch_management/templates/branch_management/branch_access_delete.html
+++ b/dispatcher_application/branch_management/templates/branch_management/branch_access_delete.html
@@ -18,7 +18,7 @@
 
 <br>
 <a class="bi bi-arrow-bar-left btn btn-lg" href="{{ request.META.HTTP_REFERER }}" style="margin-left: 350px"></a>
-    <div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
+    <div class="container d-flex justify-content-center" style="text-align: left;">
             <br>
         <form method="POST" class="text">
             {% csrf_token %}
