--- a/dispatcher_application/branch_management/templates/branch_management/branch_add.html
+++ b/dispatcher_application/branch_management/templates/branch_management/branch_add.html
@@ -22,15 +22,17 @@
     </div>
     <br>
     
-<div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
+<div class="container d-flex justify-content-center" style="text-align: left;">
     <br>
     <form method="POST" class="formular2" onSubmit="return validateForm()">
         {% csrf_token %}
-        
+        {% comment "" %}
         <p>
           <label for="{{ form.name.auto_id }}">{{ form.name.label }}</label><br>
           {{ form.name }}
         </p>
+        {% endcomment %}        
+        {{ form.as_p }}     
         <input class="btn btn-primary" id="btn-f2" type="submit" value="Add" >
 
         <div id="err">
