--- a/dispatcher_application/transport_management/templates/transport_management/transportation_detail.html
+++ b/dispatcher_application/transport_management/templates/transport_management/transportation_detail.html
@@ -17,7 +17,7 @@
 </div>
 <div class="d-flex justify-content-center">
     
-    <div class="card" style="width: 38rem;;">
+    <div class="card" style="width: 38rem;">
 		<ul class="list-group list-group-flush"></ul>
         <div class="card-body">
             <p class="card-text">Owner email: {{ object.owner_id.email }}</p>
