--- a/dispatcher_application/user_management/templates/user_management/user_delete.html
+++ b/dispatcher_application/user_management/templates/user_management/user_delete.html
@@ -9,7 +9,7 @@
 {% block content %}
 <br>
 <a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'user-list' %}" style="margin-left: 350px"></a>
-    <div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
+    <div class="container d-flex justify-content-center" style="text-align: left;">
             <br>
         <form method="POST" class="text">
             {% csrf_token %}
