--- a/dispatcher_application/access_management/templates/access_management/group_manage.html
+++ b/dispatcher_application/access_management/templates/access_management/group_manage.html
@@ -24,7 +24,7 @@
 <br>
 <div class="container d-flex justify-content-center" style="text-align: left;">
     <br>
-    <form action="POST" method="POST" onSubmit="return validateForm()" class="formular">
+    <form method="POST" onSubmit="return validateForm()" class="formular">
         {% csrf_token %}
         {% comment "" %}
         <p>
@@ -37,8 +37,7 @@
         </p>
         {% endcomment %}
         
-        {{ form.as_p }}  
-        <input class="btn btn-primary" id="btn-f2" type="submit" value="{{ form_action_type }}" style="float: right;">
+        {{ form.as_p }} 
         
         <div id="err">
             {% for field in form %}
@@ -47,9 +46,8 @@
                 {% endif %}
             {% endfor %} 
         </div>
-        
+        <input class="btn btn-primary" id="btn-f2" type="submit" value="{{ form_action_type }}" style="float: right;">
     </form>
-    
 </div>
 
 {% endblock  %}
