Email feature setup fixed

--- a/dispatcher_application/authentication/templates/authentication/reset_password_confirm.html
+++ b/dispatcher_application/authentication/templates/authentication/reset_password_confirm.html
@@ -7,44 +7,47 @@
 {% endblock nav %}
 
 {% block content %}
-{% comment "" %}
 <br>
-<a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'user-list' %}" style="margin-left: 350px"></a>
-    <div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
-            <br>
-            <h3>Enter new password</h3>
-
-        <p>Please enter your new password twice so we can verify you typed it in correctly.</p>
-        <form method="POST" class="text">
-            {% csrf_token %}
-            {{form.as_p}}
-            <input class="btn btn-primary" type="submit" value="Update Password" style="float: right;"/>
-        </form>
-    </div>
-    {% endcomment %}
-
-    <br>
-	<div class="container">
-		<div class="row">
-		  <div class="col">
-			<a class="bi bi-arrow-bar-left btn btn-lg" id="back" href="{% url 'user-list' %}"></a>
-		  </div>
-		  <div class="col-6" style="text-align: center;">
-			<h2>Enter new password</h2>
-		  </div>
-		  <div class="col">
-		  </div>
-		</div>
+<div class="container">
+	<div class="row">
+	  <div class="col">
+		<a class="bi bi-arrow-bar-left btn btn-lg" id="back" href="{% url 'user-list' %}"></a>
+	  </div>
+	  <div class="col-6" style="text-align: center;">
+		<h2>Enter new password</h2>
+	  </div>
+	  <div class="col">
+	  </div>
 	</div>
-	<br>
-	
-    <p style="text-align: center;">Please enter your new password twice so we can verify you typed it in correctly.</p>
-        <br>
-    <div class="container d-flex justify-content-center" style="text-align: center;">
-    <form method="POST" class="formular2" style="width:380px;">
-            {% csrf_token %}
-            {{form.as_p}}
-            <input class="btn btn-primary" id="btn-f2" type="submit" value="Update Password" style="float: right;"/>
-        </form>
-    </div>
+</div>
+<br>
+
+<p style="text-align: center;">Please enter your new password twice so we can verify you typed it in correctly.</p>
+    <br>
+<div class="container d-flex justify-content-center" style="text-align: center;">
+	<form method="POST" class="formular2" style="width:550px;">
+        {% csrf_token %}
+
+        <p>
+            <label for="{{ form.new_password1.auto_id }}">{{ form.new_password1.label }}:</label>
+            {{ form.new_password1 }}
+			<span class="helptext"></span>
+        </p>
+
+		<p>
+            <label for="{{ form.new_password2.auto_id }}">{{ form.new_password2.label }}:</label>
+            {{ form.new_password2 }}
+			<span class="helptext"></span>
+        </p>
+
+        <input class="btn btn-primary" id="btn-f2" type="submit" value="Update Password" style="float: right;"/>
+		<br>
+		<ul>
+			<li>Your password can’t be too similar to your other personal information.</li>
+			<li>Your password must contain at least 8 characters.</li>
+			<li>Your password can’t be a commonly used password.</li>
+			<li>Your password can’t be entirely numeric.</li>
+		</ul> 
+    </form>
+</div>
 {% endblock %}
