--- a/dispatcher_application/authentication/templates/authentication/reset_password_done.html
+++ b/dispatcher_application/authentication/templates/authentication/reset_password_done.html
@@ -8,21 +8,7 @@
 {% endblock nav %}
 
 {% block content %}
-{% comment "" %}
-<br>
-<a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'user-list' %}" style="margin-left: 350px"></a>
-    <div class="container d-flex justify-content-center text" style="text-align: left; padding: auto;">
-            <br>
-            <h3>Password reset sent</h3>
 
-            <p>We’ve emailed you instructions for setting your password, 
-                if an account exists with the email you entered, you should receive them shortly.
-            </p>
-            <p>If you don’t receive an email, please make sure you’ve entered the right email address that belongs, 
-                to your account and check your spam folder.
-            </p>
-    </div>
-{% endcomment %}
 
 <br>
 	<div class="container">
@@ -41,9 +27,9 @@
 
         <div style="text-align: center;">
         <p>We’ve emailed you instructions for setting your password, 
-            if an account exists with the email you entered, you should receive them shortly.
+            if an account exists with the email you entered, you should receive this email shortly.
         </p>
-        <p>If you don’t receive an email, please make sure you’ve entered the right email address that belongs, 
+        <p>If you don’t receive an email, please make sure you’ve entered the right email address that belongs 
             to your account and check your spam folder.
         </p>
     </div>
