--- a/dispatcher_application/templates/logo_panel.html
+++ b/dispatcher_application/templates/logo_panel.html
@@ -1,7 +1,9 @@
 <div class="container-fluid">
         <div class="row">
             <div class="col-xl-2 col-md-2 col-sm-3 col-4">
-                <img src="/static/images/CEVA.jpeg" alt="CEVA logo" height="64">
+                <a href="{% url 'login' %}">
+                    <img src="/static/images/CEVA.jpeg" alt="CEVA logo" height="64">
+                </a>
             </div>
             <div class="col-xl-9 col-md-9 col-sm-8 col-6 blue">
             </div>
