Bug fixes in js and html

--- a/dispatcher_application/access_management/templates/access_management/group_manage.html
+++ b/dispatcher_application/access_management/templates/access_management/group_manage.html
@@ -26,7 +26,7 @@
     <br>
     <form method="POST" onSubmit="return validateForm()" class="formular">
         {% csrf_token %}
-        {% comment "" %}
+        
         <p>
             <label for="{{ form.name.auto_id }}">{{ form.name.label }}</label><br>
             {{ form.name }}
@@ -35,10 +35,9 @@
             <label for="{{ form.branch.auto_id }}">{{ form.branch.label }}</label><br>
             {{ form.branch }}
         </p>
-        {% endcomment %}
         
-        {{ form.as_p }} 
         
+        <input class="btn btn-primary" id="btn-f2" type="submit" value="{{ form_action_type }}">
         <div id="err">
             {% for field in form %}
                 {% if field.errors %}
@@ -46,7 +45,6 @@
                 {% endif %}
             {% endfor %} 
         </div>
-        <input class="btn btn-primary" id="btn-f2" type="submit" value="{{ form_action_type }}" style="float: right;">
     </form>
 </div>
 
