--- a/dispatcher_application/static/css/base.css
+++ b/dispatcher_application/static/css/base.css
@@ -11,11 +11,9 @@ body {
 }
 
 .container {
-    /* max-width: 750px; */
     margin: auto;
     background-color: #fff;
     padding: 0;
-    
 }
 
 table {
@@ -29,6 +27,14 @@ form div {
 }
 
 form input {
+    border: 2px solid rgb(100, 100, 100);
+    color: rgb(51, 50, 50);
+    background-color: #fff;
+    border-radius: 4px;
+    padding: 7px;
+}
+
+form select {
     border: 2px solid rgb(100, 100, 100);
     color: rgb(51, 50, 50);
     background-color: #fff;
@@ -141,13 +147,15 @@ h2, h3, h4 {
 
 .formular {
     color:black;
+    display: flex;
+    flex-direction: column;
+    width: 500px;
 }
 
 .formular2 input{
     color:black;
     float: right;
     width: 300px;
-    /*padding-bottom: 10px;*/
 }
 
 .formular2 select {
@@ -157,6 +165,7 @@ h2, h3, h4 {
     padding-right: 105px;
     height: 39px;
     margin-top: 2px;
+
 }
 
 .formular2{
@@ -188,7 +197,7 @@ h2, h3, h4 {
 }
 
 #btn-f2{
-    width: auto; /*width: 100px;*/
+    width: auto;
     float: right;
     background-color: grey;
     color: white;
@@ -196,26 +205,18 @@ h2, h3, h4 {
     font-weight: bold;
     padding-left: 20px;
     padding-right: 20px;
-
     margin-left: auto;
 }
 
 #id_is_superuser {
     width: 584px;
     height: 17px;
-    /* margin-left: auto; */
     margin-top: -19px;
 }
 
 #id_is_active {
-    /*
-    width: 15px;
-    float: right;
-    margin-left: auto;
-    */
     width: 584px;
     height: 17px;
-    /* margin-left: auto; */
     margin-top: -19px;
 }
 
@@ -256,4 +257,13 @@ p {
     height: 50px;
     float: right;
     width: 56%;
+}
+
+
+#err {
+    color : var(--gefco-red);
+}
+
+#err p {
+    color : var(--gefco-red);
 }
