--- a/dispatcher_application/user_settings/templates/user_settings/profile_password_change.html
+++ b/dispatcher_application/user_settings/templates/user_settings/profile_password_change.html
@@ -21,14 +21,30 @@
         <br>
     <form method="POST" class="formular3">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input class="btn btn-primary" id="btn-f2" type="submit" value="Change">
+        <p>
+          <label for="{{ form.old_password.auto_id }}">{{form.old_password.label}}:</label>
+          {{ form.old_password }}
+        </p>
+        <p>
+          <label for="{{ form.new_password1.auto_id }}">{{form.new_password1.label}}:</label>
+          {{ form.new_password1 }}
+        </p>
+        <p>
+          <label for="{{ form.new_password2.auto_id }}">{{form.new_password2.label}}:</label>
+          {{ form.new_password2 }}
+        </p>
 
-        {% if messages %}    
+        <input class="btn btn-primary" id="btn-f2" type="submit" value="Change">
+        <div id="err">
+          {% if messages %}    
             {% for message in messages %}
                 <p class="message">{{ message }}</p>
             {% endfor %}
-        {% endif %}
+          {% endif %} 
+        </div>
+
+
+        
     </form>
 </div>
 {% endblock %}
