Change of user creation

--- a/dispatcher_application/authentication/templates/authentication/reset_password_confirm.html
+++ b/dispatcher_application/authentication/templates/authentication/reset_password_confirm.html
@@ -10,9 +10,6 @@
 <br>
 <div class="container">
 	<div class="row">
-	  <div class="col">
-		<a class="bi bi-arrow-bar-left btn btn-lg" id="back" href="{% url 'user-list' %}"></a>
-	  </div>
 	  <div class="col-6" style="text-align: center;">
 		<h2>Enter new password</h2>
 	  </div>
@@ -40,7 +37,7 @@
 			<span class="helptext"></span>
         </p>
 
-        <input class="btn btn-primary" id="btn-f2" type="submit" value="Update Password" style="float: right;"/>
+        <input class="btn btn-primary" id="btn-f2" type="submit" value="Change Password" style="float: right;"/>
 		<br>
 		<ul>
 			<li>Your password can’t be too similar to your other personal information.</li>
