--- a/dispatcher_application/access_management/templates/access_management/group_manage.html
+++ b/dispatcher_application/access_management/templates/access_management/group_manage.html
@@ -27,6 +27,7 @@
     <form method="POST" onSubmit="return validateForm()" class="formular">
         {% csrf_token %}
         
+        {% comment "" %}
         <p>
             <label for="{{ form.name.auto_id }}">{{ form.name.label }}</label><br>
             {{ form.name }}
@@ -35,6 +36,9 @@
             <label for="{{ form.branch.auto_id }}">{{ form.branch.label }}</label><br>
             {{ form.branch }}
         </p>
+        {% endcomment %}
+
+        {{form.as_p}}
         
         
         <input class="btn btn-primary" id="btn-f2" type="submit" value="{{ form_action_type }}">
