--- a/dispatcher_application/access_management/static/css/form_style.css
+++ b/dispatcher_application/access_management/static/css/form_style.css
@@ -26,3 +26,11 @@
 ::-webkit-scrollbar-thumb:hover {
     background: var(--dark-grey); 
 }
+
+#id_name {
+	width: 350px;
+}
+
+#id_branch {
+	width: 495px;
+}
