--- a/dispatcher_application/user_management/templates/user_management/user_created_email_message.html
+++ b/dispatcher_application/user_management/templates/user_management/user_created_email_message.html
@@ -5,7 +5,7 @@
     <p>Your account was successfully created.</p>
     <p>
         To access your account procceed to 
-        <a href="{{ request.scheme }}://{{ request.get_host }}{% url 'password_reset' %}">reset password page</a> 
+        <a href="{{ url_address }}">reset password page</a> 
         and reset your password to a new one. Then you will be able to login to your new account.
     </p>
 </body>
